# face_attendance

./: .gitignore  auto_crop.py  check_speed.py  pyproject.toml  register.py  run_batch.py  run_realtime.py
core/: config.py  database.py  engine.py  identity.py  processor.py  utils.py
