[project]
name = "face-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "insightface>=0.7.3",
  "numpy<2",
  "opencv-python>=4.11.0.86",
  # macOS (M1/M2/M3) 专用：支持 CoreML 加速
  "onnxruntime-silicon>=1.16.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
  # Windows/Linux 带 Nvidia 显卡专用：支持 CUDA 加速
  "onnxruntime-gpu>=1.17.0; sys_platform != 'darwin' and platform_machine != 'arm64'",
  # 通用 CPU 版本 (作为备选或在不支持 GPU 的环境中自动选择)
  "onnxruntime>=1.23.2",
  "polars>=1.36.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
